# opensaf

./: ChangeLog  Install-Ubuntu-24.md  Install.md  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  opensaf.spec.in
java/ais_api/src/org/saforum/ais/clm/: NodeAddressIPv4.java
python/pyosaf/: saAmf.py
python/pyosaf/utils/: __init__.py
python/pyosaf/utils/immom/: agent.py  ccb.py
src/ais/: aisa_api.c
src/ais/include/: saAis.h  saAis_B_5_14.h
src/amf/amfd/: chkop.cc  ckpt_dec.cc  clm.cc  csi.cc  main.cc  mds.cc  mds.h  ndfsm.cc  ndmsg.cc  ndproc.cc  node.cc  node.h  pg.cc  role.cc  sg.cc  sgproc.cc  siass.cc  su.cc  timer.cc
src/amf/amfnd/: amfnd.cc  avnd_cb.h  avnd_comp.h  avnd_mds.h  cbq.cc  clc.cc  clm.cc  comp.cc  compdb.cc  di.cc  hcdb.cc  imm.cc  main.cc  mds.cc  proxy.cc  proxydb.cc  su.cc  susm.cc  tmr.cc  verify.cc
src/amf/common/: amf_d2nmsg.h  d2nedu.c
src/base/: Makefile.am  log_writer.cc  ncs_main_pub.c  osaf_secutil.c  sysf_def.c
src/base/apitest/: basetest.c  basetest.h  sysf_ipc_test.c
src/ckpt/agent/: cpa_cb.h
src/ckpt/apitest/: ckpttest.c  test_cpa.c  test_cpa_util.c  test_cpsv.h  test_cpsv_conf.h
src/ckpt/ckptd/: cpd_amf.c  cpd_init.h
src/clm/agent/: clma_mds.cc  clma_util.cc
src/clm/apitest/: tet_saClmInitialize.cc
src/clm/clmd/: clms_evt.cc  clms_imm.cc  clms_main.cc  clms_mbcsv.cc  clms_mds.cc  clms_util.cc
src/clm/clmnd/: main.cc
src/clm/tools/: clm-adm
src/dtm/dtmnd/: dtm_inter_svc.cc  dtm_intra.cc  dtm_intra_svc.cc  dtm_node.cc  dtm_node.h  dtm_node_db.cc  dtm_node_sockets.cc  dtm_read_config.cc
src/dtm/tools/: osaflog.cc
src/dtm/transport/: log_server.cc  log_server.h
src/evt/agent/: eda.h
src/evt/apitest/: tet_eda.c  tet_eda.h  tet_edsv_func.c
src/evt/evtd/: eds.h  eds_amf.c  eds_amf.h  eds_cb.h
src/experimental/: Makefile.am
src/fm/fmd/: fm_mds.cc
src/imm/: Makefile.am  README
src/imm/agent/: imma.h  imma_init.cc  imma_oi_api.cc  imma_om_api.cc  imma_proc.cc
src/imm/apitest/management/: test_saImmConfigSyncrTimeoutImma.c  test_saImmOmCcbInitialize.c  test_saImmOmThreadInterference.c
src/imm/common/: immsv_api.h  immsv_evt.h  immsv_evt_model.h
src/imm/config/: immsv_classes.xml
src/imm/immd/: immd.h  immd_cb.h  immd_proc.c
src/imm/immloadd/: imm_loader.cc  imm_pbe_load.cc
src/imm/immnd/: ImmAttrValue.cc  ImmAttrValue.h  ImmModel.cc  ImmModel.h  immnd.conf  immnd_cb.h  immnd_evt.c  immnd_init.h  immnd_main.c  immnd_proc.c
src/imm/immpbed/: immpbe_daemon.cc
src/imm/tools/: baseimm.py  imm_admin.c  immxml-merge  immxml-validate
src/lck/apitest/: tet_gld.c  tet_glnd.c
src/lck/lckd/: gld_dl_api.h
src/lck/lcknd/: glnd_cb.h
src/log/: Makefile.am
src/log/agent/: lga_agent.cc  lga_agent.h  lga_mds.cc  lga_mds.h  lga_state.cc  lga_state.h  lga_util.cc  lga_util.h
src/log/apitest/: log_server.cc  log_server.h  logtest.c  logtest.h  saflogtest.c  tet_LogOiOps.c  tet_cfg_destination.c  tet_saLogStreamClose.cc  tet_saLogStreamConfigFacilityId.c  tet_saLogStreamOpen_2.c  tet_saLogWriteLogCallbackT.c
src/log/common/: lgsv_msg.h
src/log/logd/: lgs_clm.cc  lgs_clm.h  lgs_dest.cc  lgs_dest.h  lgs_evt.cc  lgs_evt.h  lgs_imm.cc  lgs_mbcsv.cc  lgs_mbcsv_v6.cc  lgs_mbcsv_v6.h  lgs_mbcsv_v8.cc  lgs_mds.cc  lgs_stream.cc  lgs_unixsock_dest.cc
src/mbc/: mbcsv_act.c  mbcsv_api.c  mbcsv_tmr.c  mbcsv_util.c
src/mds/: Makefile.am  mds_adest_op.c  mds_adest_op.h  mds_c_api.c  mds_c_db.c  mds_c_sndrcv.c  mds_core.h  mds_dt2c.h  mds_dt_common.c  mds_dt_tcp.c  mds_dt_tcp.h  mds_dt_tipc.c  mds_main.c  mds_svc_op.c  mds_svc_op.h  mds_tipc_fctrl_intf.cc
src/mds/apitest/: mdstipc.h  mdstipc_api.c  mdstipc_conf.c
src/msg/msgnd/: mqnd_db.h
src/nid/: nodeinit.cc  opensafd  opensafd.service
src/ntf/apitest/: tet_longDnObject_notification.cc  tet_ntf_common.cc  tet_saNtfNotificationReadInitialize.cc  tet_saNtfNotificationSend.cc  tet_scOutage_reinitializeHandle.cc
src/ntf/common/: ntfsv_enc_dec.c
src/ntf/ntfd/: NtfAdmin.cc  NtfAdmin.h  NtfLogger.cc  NtfLogger.h  NtfNotification.cc  NtfNotification.h  NtfSubscription.cc  ntfs.h  ntfs_cb.h  ntfs_com.h  ntfs_evt.c  ntfs_evt.h  ntfs_main.c  ntfs_mbcsv.c  ntfs_mbcsv.h  ntfs_mds.c
src/ntf/ntfimcnd/: ntfimcn_imm.c
src/ntf/tools/: ntfsend.c
src/osaf/: Makefile.am  config.h.in
src/osaf/consensus/: consensus.cc  consensus.h  consensus_env.cc  consensus_env.h  key_value.cc
src/osaf/immtools/imm_modify_config/: add_operation_to_ccb.cc  add_operation_to_ccb.h  attribute.cc  attribute.h  immccb.cc  immccb.h
src/osaf/immtools/imm_modify_demo/: ccbdemo_create.cc  ccbdemo_delete.cc  ccbdemo_modify.cc  common.cc  common.h  test_ccbhdl.cc
src/osaf/immtools/imm_om_ccapi/: om_admin_owner_clear.h  om_admin_owner_handle.h  om_admin_owner_set.h  om_ccb_handle.h  om_ccb_object_create.h  om_ccb_object_delete.h  om_ccb_object_modify.h  om_handle.h
src/osaf/immtools/imm_om_ccapi/common/: common.h  imm_attribute.h
src/osaf/immutil/: immutil.c
src/plm/plmcd/: plmcboot.service  plmcd.service
src/rde/agent/: rda_papi.cc
src/rde/rded/: rde_amf.cc  rde_cb.h  rde_main.cc  rde_mds.cc  role.cc  role.h
src/smf/: Makefile.am
src/smf/agent/: smfa_mds.c
src/smf/smfd/: SmfAdminState.cc  SmfExecControlHdl.cc  SmfImmOperation.h  SmfProcedureThread.cc  SmfUpgradeCampaign.h  SmfUpgradeProcedure.cc  SmfUpgradeStep.cc  SmfUtils.cc  SmfUtils_ObjExist.cc  SmfUtils_ObjExist.h
src/smf/smfnd/: smfnd.h  smfnd_evt.c  smfnd_mds.c
